[package]
edition = "2021"
name = "actix-web-server"
version = "0.1.0"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.210", features = ["derive"]}
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread"]}
sqlx = {version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"]}
dotenv = "0.15.0"
